--- a/index.html
+++ b/index.html
@@ -10,5 +10,10 @@
         <div id="enemyPlanes"></div>
     </div>
    <script src="main.js"></script>
+   <h2><b>Reguli:</b></h2>
+   <h3> - apasa F5 pana iti convine pozitia avioanelor tale</h3>
+   <h3> - lanseaza bomba pe tabla inamica (rosu - lovit; gri - ratat)</h3>
+   <h3> - incearca sa-ti dai seama de pozitia avioanelor ca sa lovesti capul</h3>
+   <h3> - castiga cine loveste primul capurile celor 3 avioane inamice</h3>
 </body>
 </html>
